--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB;User ID=RentCarDB;Password=RentCarDB;"
+  }
 }
