--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB;User ID=RentCarDB;Password=RentCarDB;"
+    "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB2;User ID=RentCarDB;Password=RentCarDB;"
   }
 }
