--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB2;User ID=RentCarDB;Password=RentCarDB;"
+  },
+  "AppSettings": {
+    "Secret": "thesecreatkey",
+    "Expiration": 1,
+    "Creater": "Rent a car",
+    "ValidIn": "http://localhost:"
   }
 }
