Implement JWT, login, create User, and generate a token to access the API

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
     "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB2;User ID=RentCarDB;Password=RentCarDB;"
   },
   "AppSettings": {
-    "Secret": "thesecreatkey",
+    "Secret": "1234567890abcdefghijkl",
     "Expiration": 1,
     "Creater": "Rent a car",
     "ValidIn": "http://localhost:"
