--- a/appsettings.json
+++ b/appsettings.json
@@ -8,12 +8,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB2;User ID=RentCarDB;Password=RentCarDB;"
+    "ApplicationConnection": "Server=localhost;Initial Catalog=RentCarDB3;User ID=RentCarDB;Password=RentCarDB;"
   },
   "AppSettings": {
+    //The secret key is simple it is used only to study the technology, 
+    //if you want to use something more safe generate a random secret key 
     "Secret": "1234567890abcdefghijkl",
     "Expiration": 1,
-    "Creater": "Rent a car",
-    "ValidIn": "http://localhost:"
+    "Creater": "http://localhost:55266",
+    "ValidIn": "http://localhost:55266"
   }
 }
